# src/Application/Service/Api/Affiliate/PutAffiliate/PutAffiliateService.php
@@ -1,13 +1,16 @@
 <?php
 
-namespace ParkimeterAffiliates\Application\Service\Api\Affiliate\GetAffiliate;
+namespace ParkimeterAffiliates\Application\Service\Api\Affiliate\PutAffiliate;
 
 use ParkimeterAffiliates\Application\Service\Api\Affiliate\AffiliateApiException;
-use ParkimeterAffiliates\Application\Service\Api\Affiliate\GuardAffiliateDisabled;
 use ParkimeterAffiliates\Application\Service\Api\Affiliate\GuardAffiliateNotFound;
+use ParkimeterAffiliates\Application\Service\Api\Affiliate\GuardAffiliateDisabled;
 use ParkimeterAffiliates\Domain\Model\AffiliateRepository;
+use ParkimeterAffiliates\Domain\Model\Attributes\Email;
+use ParkimeterAffiliates\Domain\Model\Attributes\LastName;
+use ParkimeterAffiliates\Domain\Model\Attributes\Name;
 
-final class GetAffiliateService
+final class PutAffiliateService
 {
     /**
      * @var AffiliateRepository
@@ -15,7 +18,7 @@ final class GetAffiliateService
     private $repository;
 
     /**
-     * GetAffiliateService constructor.
+     * PutAffiliateService constructor
      * @param AffiliateRepository $repository
      */
     public function __construct(
@@ -27,11 +30,10 @@ final class GetAffiliateService
     /**
      * Returns a affiliate by given data
      *
-     * @param GetAffiliateRequest $request
-     * @return GetAffiliateResponse
+     * @param PutAffiliateRequest $request
      * @throws AffiliateApiException
      */
-    public function __invoke(GetAffiliateRequest $request): GetAffiliateResponse
+    public function __invoke(PutAffiliateRequest $request)
     {
         try {
             $affiliate = $this->repository->find($request->affiliateId());
@@ -39,14 +41,11 @@ final class GetAffiliateService
             GuardAffiliateNotFound::guard($affiliate, $request->affiliateId());
             GuardAffiliateDisabled::guard($affiliate);
 
-            return new GetAffiliateResponse(
-                $affiliate->getId(),
-                $affiliate->getStatusId(),
-                $affiliate->getAffiliateKey(),
-                $affiliate->getName(),
-                $affiliate->getLastName(),
-                $affiliate->getEmail()
-            );
+            $affiliate->setName(Name::fromString($request->name()));
+            $affiliate->setLastName(LastName::fromString($request->lastName()));
+            $affiliate->setEmail(Email::fromString($request->email()));
+
+            $this->repository->save($affiliate);
         } catch (\Exception $e) {
             throw AffiliateApiException::fromException($e);
         }
